--- a/assign.html
+++ b/assign.html
@@ -1,3 +1,5 @@
+<!--This is the main html page-->
+
 <!doctype html>
 <html>
 
@@ -9,6 +11,7 @@
 </head>
 
 <body>
+    <!--header start-->
     <div class="header">
         <h4 class="webname">Demo Website</h4>
         <div class="header-right">
@@ -20,8 +23,10 @@
             </div>
         </div>
     </div>
-
+    <!--header ends-->
+   
     <div class="contentflex">
+        <!--signup form here-->
         <div class="form">
             <form>
                 <h3 class="signup">Sign Up</h3>
@@ -48,7 +53,8 @@
                 </div>
             </form>
         </div>
-
+        
+        <!--Scrollable box here-->
         <div class="box">
             <b>The Road Not Taken
                 -Robert Frost </b>
@@ -81,6 +87,7 @@
         </div>
     </div>
 
+    <!--footer starts-->
     <div class="footer">
         <div>
             <img src="kelltonlogo.jpg" class="logo" alt="logo">
@@ -89,6 +96,8 @@
             <h4>Contact Us: <br>+91-9873427882</h4>
         </div>
     </div>
+    <!--footer ends-->
+    
 </body>
 
 </html>
